--- a/index.html
+++ b/index.html
@@ -1,14 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a5652f6029.js" crossorigin="anonymous"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Poppins&display=swap');
+    </style>
     <title>Leader Board</title>
 </head>
+
 <body>
+    <header>
+        <nav>
+            <div>
+                <a href=""><img class="logo" src="images/icons/logo.png" alt=""></a>
+                <a href="">Idea</a>
+            </div>
+            <div>
+                <a href="">HOME</a>
+                <a href="">ABOU</a>
+                <a href="">WORKS</a>
+                <a href=""><img src="images/icons/profile.png" alt=""></a>
+            </div>
+        </nav>
+    </header>
     <main>
-        
+        <section class="container">
+            <!------------------
+                 section of top-players start
+            -------------------->
+            <div class="top-players">
+                <h1 class="section-title">Top Player</h1>
+                <div class="players">
+                    <div class="player-info">
+                        <img src="images/players/player-1.png" alt="">
+                        <h2 class="player-name">John Smith</h2>
+
+                    </div>
+                    <div class="player-info">
+                        <img src="images/players/player-2.png" alt="">
+                        <h2 class="player-name">John Smith</h2>
+
+                    </div>
+                    <div class="player-info">
+                        <img src="images/players/player-3.png" alt="">
+                        <h2 class="player-name">John Smith</h2>
+
+                    </div>
+                    <div class="player-info">
+                        <img src="images/players/player-4.png" alt="">
+                        <h2 class="player-name">John Smith</h2>
+
+                    </div>
+                    <div class="player-info">
+                        <img src="images/players/player-5.png" alt="">
+                        <h2 class="player-name">John Smith</h2>
+
+                    </div>
+                    <div class="player-info">
+                        <img src="images/players/player-6.png" alt="">
+                        <h2 class="player-name">John Smith</h2>
+
+                    </div>
+
+
+                </div>
+            </div>
+            </div>
+            <!------------------
+                 section of top-players end
+            -------------------->
+            <hr>
+            <!-- -----------
+                top-blog division start
+            ------------------------- -->
+            <div class="top-blog">
+                <h1 class="section-title"></h1>
+                <div class="all-blogs">
+                    <artical class="blog">
+                        <div class="thamnel">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h2 class="blog-name">13 of My Favorite <br>
+
+                                UI/UX Goodies</h2>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </artical>
+                    <artical class="blog">
+                        <div class="thamnel">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h2 class="blog-name">13 of My Favorite <br>
+
+                                UI/UX Goodies</h2>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </artical>
+                    <artical class="blog">
+                        <div class="thamnel">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h2 class="blog-name">13 of My Favorite <br>
+
+                                UI/UX Goodies</h2>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </artical>
+                    <artical class="blog">
+                        <div class="thamnel">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h2 class="blog-name">13 of My Favorite <br>
+
+                                UI/UX Goodies</h2>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </artical>
+                </div>
+            </div>
+        </section>
+        <!------------------------- 
+            start latest courses section 
+        -------------------------->
+        <section class="container">
+            <div class="latest-courses">
+                <h1 class="section-title">Latest Course</h1>
+                <div class="all-courses">
+                    <div class="course">
+                        <div class="banner">
+                            <img src="images/courses/course-1.png" alt="">
+                        </div>
+                        <h2 class="course-name">React - The Complete <br>Guide 2020 </h2>
+                        <p class="course-author">Reed Krakoff</p>
+                        <div class="course-info">
+                            <div class="icon">
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star unfilled"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="duration">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="course">
+                        <div class="banner">
+                            <img src="images/courses/course-2.png" alt="">
+                        </div>
+                        <h2 class="course-name">React - The Complete <br>Guide 2020 </h2>
+                        <p class="course-author">Reed Krakoff</p>
+                        <div class="course-info">
+                            <div class="icon">
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star unfilled"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="duration">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="course">
+                        <div class="banner">
+                            <img src="images/courses/course-3.png" alt="">
+                        </div>
+                        <h2 class="course-name">React - The Complete <br>Guide 2020 </h2>
+                        <p class="course-author">Reed Krakoff</p>
+                        <div class="course-info">
+                            <div class="icon">
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star unfilled"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="duration">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
